Prueba con chunk_len=70 y similarity_search con k=1

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ __pycache__/
 
 # información del proyecto "no relevante"
 .idea
+
+# documentación pdf, txt y Database
+pdfdata/*
+txtdata/*
+vector_db/*
