--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,8 @@ __pycache__/
 
 # documentación pdf, txt y Database
 pdfdata/*
+!pdfdata/.gitkeep
 txtdata/*
+!txtdata/.gitkeep
 vector_db/*
+!vector_db/.gitkeep
