Upgrade considerable de data_extractor, vectorizer y prompt del cliente

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-sentence-transformers
 faiss-cpu
-PyMuPDF
-requests
+flask
 langchain
 llama-cpp-python
-flask
+PyMuPDF
+requests
+sentence-transformers
 tiktoken
+tqdm
+transformers
+torch
