Updated /model, scripts, README and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,12 @@ Samples/
 # documentación pdf, txt y Database
 pdfdata/*
 !pdfdata/.gitkeep
+
 txtdata/*
 !txtdata/.gitkeep
+
 vector_db/*
 !vector_db/.gitkeep
+
+model/
+!model/.gitkeep
