--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 
 # información del proyecto "no relevante"
 .idea
+uah_client.py
+uah_server.py
 
 # documentación pdf, txt y database
 pdfdata/*
